# wielen-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/wielenbot/: __init__.py  commands.py  config.py  i18n.py  main.py  models.py  notifier.py  store.py  telegram.py  watches.py
src/wielenbot/fetchers/: __init__.py  apify_fetcher.py  base.py  mapping.py  playwright_fetcher.py
tests/: conftest.py  test_commands.py  test_config.py  test_i18n.py  test_mapping.py  test_notifier.py  test_settings_store.py  test_store.py  test_telegram.py  test_watch_store.py  test_watches.py
